feat: implement addAssistant method in EventService and create associated DTOs and repositories