@@ -1,21 +1,27 @@
 package cl.metspherical.calbucofelizbackend.features.events.service;
 
+import cl.metspherical.calbucofelizbackend.features.events.dto.CreateAssistantResponseDTO;
 import cl.metspherical.calbucofelizbackend.features.events.dto.CreateEventRequestDTO;
 import cl.metspherical.calbucofelizbackend.features.events.dto.EventDetailDTO;
 import cl.metspherical.calbucofelizbackend.features.events.dto.EventOverviewDTO;
 import cl.metspherical.calbucofelizbackend.features.events.dto.EventsByMonthResponseDTO;
+import cl.metspherical.calbucofelizbackend.features.events.enums.AssistanceType;
+import cl.metspherical.calbucofelizbackend.features.events.model.Assistance;
 import cl.metspherical.calbucofelizbackend.features.events.model.Event;
+import cl.metspherical.calbucofelizbackend.features.events.model.EventAssistant;
 import cl.metspherical.calbucofelizbackend.common.domain.User;
+import cl.metspherical.calbucofelizbackend.features.events.repository.AssistanceRepository;
 import cl.metspherical.calbucofelizbackend.features.events.repository.EventRepository;
+import cl.metspherical.calbucofelizbackend.features.events.repository.EventAssistantRepository;
 import cl.metspherical.calbucofelizbackend.common.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.time.Month;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,6 +29,8 @@ public class EventService {
 
     private final EventRepository eventRepository;
     private final UserRepository userRepository;
+    private final EventAssistantRepository eventAssistantRepository;
+    private final AssistanceRepository assistanceRepository;
 
     /**
      * Gets all events for a specific month
@@ -40,7 +48,7 @@ public class EventService {
         // Convert to DTOs
         List<EventOverviewDTO> eventDTOs = events.stream()
                 .map(this::convertToEventDTO)
-                .collect(Collectors.toList());
+                .toList();
         
         return new EventsByMonthResponseDTO(monthName, eventDTOs);
     }    /**
@@ -70,6 +78,64 @@ public class EventService {
 
         // 2. Delete the event (cascade will handle event assistants and other relationships)
         eventRepository.delete(event);
+    }
+
+    /**
+     * Adds or updates an assistant to an event
+     *
+     * @param eventId ID of the event
+     * @param userId ID of the user
+     * @param type String representing the assistance type
+     * @return CreateAssistantResponseDTO with status and type
+     * @throws RuntimeException if event not found or assistance type not found
+     */
+    @Transactional
+    public CreateAssistantResponseDTO addAssistant(Integer eventId, UUID userId,String type) {
+        // 1. Validate event exists
+        Event event = eventRepository.findById(eventId)
+                .orElseThrow(() -> new RuntimeException("Event not found with id: " + eventId));
+
+        // 2. Validate user exists
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
+
+        // 3. Convert string to AssistanceType enum
+        AssistanceType assistanceType = AssistanceType.fromDisplayName(type)
+                .orElseThrow(() -> new RuntimeException("Invalid assistance type: " + type));
+
+        // 4. Get or create assistance by name (which is the AssistanceType)
+        Assistance assistance = assistanceRepository.findByName(assistanceType)
+                .orElseGet(() -> {
+                    // Create new assistance if it doesn't exist
+                    Assistance newAssistance = Assistance.builder()
+                            .id((byte) (assistanceType.ordinal() + 1))
+                            .name(assistanceType)
+                            .build();
+                    return assistanceRepository.save(newAssistance);
+                });
+
+        // 5. Check if user is already registered for this event
+        EventAssistant.EventAssistantId assistantId = new EventAssistant.EventAssistantId(userId, eventId);
+        EventAssistant existingAssistant = eventAssistantRepository.findById(assistantId).orElse(null);
+
+        String status;
+        if (existingAssistant != null) {
+            // Update existing assistance
+            existingAssistant.setAssistance(assistance);
+            eventAssistantRepository.save(existingAssistant);
+            status = "updated";
+        } else {
+            // Create new assistant
+            EventAssistant newAssistant = EventAssistant.builder()
+                    .user(user)
+                    .event(event)
+                    .assistance(assistance)
+                    .build();
+            eventAssistantRepository.save(newAssistant);
+            status = "created";
+        }
+
+        return new CreateAssistantResponseDTO(status, assistance.getName().getDisplayName());
     }
 
     /**
